--- a/Task 3 - SCSS/style.scss
+++ b/Task 3 - SCSS/style.scss
@@ -25,6 +25,11 @@ section {
     margin-bottom: 7vh;
 }
 
+.container_line, 
+.container_circle {
+    background-color: #e2eff1;
+}
+
 // Lines
 .lines {
     height: 5vh;
