--- a/Task 3 - SCSS/style.css
+++ b/Task 3 - SCSS/style.css
@@ -14,6 +14,11 @@ section {
   margin-bottom: 7vh;
 }
 
+.container_line,
+.container_circle {
+  background-color: #e2eff1;
+}
+
 .lines {
   height: 5vh;
   width: 100%;
